sln: add sln to task 1

--- a/p03.tex
+++ b/p03.tex
@@ -92,6 +92,9 @@
 	  \item вернуть диаметр дерева.
 	\end{itemize}
 	Диаметр дерева --- длина самого длинного простого пути в дереве.
+	\begin{solution}
+		Для подвешивания (за $\O(1)$) будем использовать список смежности. Также будем хранить глубину текущей вершины и массив родителей (для двоичных подъемов $\rightarrow$ LCA). Диаметр дерева будет состоять из суммы двух самых длинных веток (выходим из одного листа и приходим в другой лист), потому что только таким образом возможно получить наидлиннейший простой путь в дереве. Пусть в какой-то момент времени у нас известно, что диаметр складывается из длин путей $leaf_1\ldots root$ и $root\ldots leaf_2$, а также глубина $leaf_1$ меньше глубины $leaf_2$ (если это не так, то переназываем $leaf_1$ и $leaf_2$, чтобы это выполнялось). Подвешивая новую вершину $u$, запускаем $LCA(leaf_1, u)$ и если ответ $root$, то сравниваем глубину $leaf_1$ и $u$. Если $u$ оказывается глубже, то кладем $leaf_1 \leftarrow u$. Если ответ не $root$, то запускаем $LCA(leaf_2, u)$. Если тут ответ $root$, то сравниваем глубину $leaf_2$ и $u$. Если $u$ оказывается глубже, то кладем $leaf_2 \leftarrow u$. Итого, при каждом добавлении вершины ($\O(1)$) мы переопределяем диаметр дерева с помощью LCA, который работает за $\O(\log n)$. Диаметр переопределяется корректно, потому что мы сравниваем глубины добавляемой вершины и наименее глубокого из листов (говорили в начале, что всегда можно переназвать листья, чтобы сравнивать именно в таком порядке).
+	\end{solution}
 	
   \item
     Дан ориентированный граф, в котором исходящая степень каждой вершины
