sln: add sln to task 2 a

--- a/p03.tex
+++ b/p03.tex
@@ -101,6 +101,9 @@
 	равна единице. Запросы online: из вершины $v$ сделать $k$ шагов вперед и вернуть куда пришли.
 	\begin{enumerate}
 	  \item Предподсчет: $\O(n \log k_{\max})$, время на запрос: $\O(\log k)$.
+	  \begin{solution}
+		Для каждой вершины будем хранить массив вершин, которые можно достичь из нее при $k=2^i, i = 0 \ldots \log k_{\max}$. Предподсчет для всех компонент связности тогда займет $\O(n \log k_{\max})$. При ответе на запрос $k$ смотрим на степени двоек, из которых состоит $k$ и идем по графу в соответствии с разложением $k$ на основе предподсчета в порядке уменьшения степени двоек. Как дошли до минимального разряда, возвращаем текущую вершину. Так как идем по степеням двойки, то каждый раз расстояние уменьшается и получается асимптотика $\O(\log k)$ на запрос.
+	  \end{solution}
 	  \item Предподсчет: $\O(n \log n)$, время на запрос: $\O(\log \min(k, n))$.      
 	\end{enumerate}
 	
