sln: add sln to task 2 b

--- a/p03.tex
+++ b/p03.tex
@@ -105,6 +105,9 @@
 		Для каждой вершины будем хранить массив вершин, которые можно достичь из нее при $k=2^i, i = 0 \ldots \log k_{\max}$. Предподсчет для всех компонент связности тогда займет $\O(n \log k_{\max})$. При ответе на запрос $k$ смотрим на степени двоек, из которых состоит $k$ и идем по графу в соответствии с разложением $k$ на основе предподсчета в порядке уменьшения степени двоек. Как дошли до минимального разряда, возвращаем текущую вершину. Так как идем по степеням двойки, то каждый раз расстояние уменьшается и получается асимптотика $\O(\log k)$ на запрос.
 	  \end{solution}
 	  \item Предподсчет: $\O(n \log n)$, время на запрос: $\O(\log \min(k, n))$.      
+	  \begin{solution}
+		По условию задачи граф состоит из компонент связности, в которых ровно 1 цикл (0 или больше не может быть, потому что исходящая степень каждой вершины равна 1). Делаем предподсчет аналогично предыдущей задаче -- массивы вершин, которые можно достичь из текущей при $k=2^i, i = 0 \ldots n$. Будем также хранить длины циклов. При запросе смотрим на соотношение $k$ и $n$. Если $k < n$, пользуемся решением предыдущей задачи, иначе, когда $k \geq n$ -- по сути нужно будет наматывать круги (плохо) или сделать шаги по модулю (хорошо): $k \mod len(loop) \rightarrow \O(\log n)$. Итого, асимптотика запроса получается $\O(\log \min(k, n))$.
+	  \end{solution}
 	\end{enumerate}
 	
   \item
