tmp: add semisln to task 3

--- a/p03.tex
+++ b/p03.tex
@@ -117,6 +117,11 @@
 	    \item изменить $i$-ю скобку.
 	\end{itemize}
 	$\O(n)$ на предподсчет, $\O(\log n)$ на запрос, online.
+	\begin{solution}
+		Будем строить дерево отрезков над последовательностью скобок, где в каждой вершине -- пара из количества открывающих скобок без пары и количества закрывающих скобов без пары. Получая запрос $[L, R]$, проходя по дереву отрезков, получаем набор из канонических отрезков, которые теперь нужно соединить. Соединять будем следующим образом: у нас есть два отрезка $(x_1, y_1), (x_2, y_2)$, которые соединяются в $(x, y)$, где. 
+
+		Построение дерева отрезков за $\O(n)$.
+	\end{solution}
 
   \item
 	Попробуем модифицировать идею \texttt{SparseTable} так, чтобы она работала для произвольных ассоциативных функций:
