sln: add sln to task 3

--- a/p03.tex
+++ b/p03.tex
@@ -118,9 +118,7 @@
 	\end{itemize}
 	$\O(n)$ на предподсчет, $\O(\log n)$ на запрос, online.
 	\begin{solution}
-		Будем строить дерево отрезков над последовательностью скобок, где в каждой вершине -- пара из количества открывающих скобок без пары и количества закрывающих скобов без пары. Получая запрос $[L, R]$, проходя по дереву отрезков, получаем набор из канонических отрезков, которые теперь нужно соединить. Соединять будем следующим образом: у нас есть два отрезка $(x_1, y_1), (x_2, y_2)$, которые соединяются в $(x, y)$, где. 
-
-		Построение дерева отрезков за $\O(n)$.
+		Будем строить дерево отрезков над последовательностью скобок, где в каждой вершине -- пара из количества открывающих скобок без пары и количества закрывающих скобов без пары. Получая запрос $[L, R]$, проходя по дереву отрезков, получаем набор из канонических отрезков, которые теперь нужно соединить. Соединять будем следующим образом: у нас есть два отрезка $(x_1, y_1), (x_2, y_2)$, которые соединяются в $(x, y)$, где $$x = x_2 + \min (y_2 - x_1, 0), y = y_1 + \max (y_2 - x_1, 0).$$ Если после всех вычислений получается пара нулей, то последовательность скобок правильная. Изменение скобки (за $\O(1)$) приводит к тому, что нужно перестроить дерево отрезков снизу вверх, используя то соединение, которое было описано выше. Корректность обоснована тем, что представленная формула соединения отрезков учитывает то, что в левом отрезке могут быть открывающие скобки, которые компенсируют закрывающие скобки в правом отрезке. Асимптотика запроса -- глубина дерева отрезков $\O(\log n)$. Асимптотика предподсчета -- построение дерева отрезков за $\O(n)$.
 	\end{solution}
 
   \item
