--- a/algo_template.tex
+++ b/algo_template.tex
@@ -98,6 +98,7 @@
   % \input{hw12.tex}
   % \input{p01.tex}
   % \input{p02.tex}
-  \input{p03.tex}
+  % \input{p03.tex}
+  \input{p04.tex}
 
 \end{document}
