sln: add sln to task 1

--- a/p04.tex
+++ b/p04.tex
@@ -83,7 +83,16 @@
       \item Добавление в AVL-дерево требует $\O(1)$ вращений.
       \item Удаление из AVL-дерева требует $\Omega(\log n)$ вращений в худшем случае.
     \end{enumerate}
+    \begin{solution}
+      \textbf{Добавление:}
+      
+      При добавлении элемента в поддерево, у него может нарушиться баланс. Если баланс не нарушается, то вращений делать не нужно, что $\O(1)$. Если высоты меньших поддеревьев начинают отличаться больше, чем на 1, то с помощью 1 или в худшем случае 2 вращений можно это исправить, при этом в исходном поддереве высота корня стала не больше, поэтому все вершины, начиная с этого корня и выше, уже сбалансированы, поэтому в худшем случае добавление в AVL-дерево требует $\O(1)$ вращений.
 
+      \textbf{Удаление:}
+
+      Будем хранить для каждой вершины разницу между высотой её левого и правого поддерева $diff[i]=h(L)-h(R)$. Для простоты опишем рекурсивный алгоритм удаления. Если вершина — лист, то удалим её, иначе найдём самую близкую по значению вершину $a$, переместим её на место удаляемой вершины и удалим вершину $a$. От удалённой вершины будем подниматься вверх к корню и пересчитывать баланс у вершин. Если мы поднялись в вершину $i$ из левого поддерева, то $diff[i]$ уменьшается на единицу, если из правого, то увеличивается на единицу. Если пришли в вершину и её баланс стал равным 1 или -1, то это значит, что высота этого поддерева не изменилась и подъём можно остановить. Если баланс вершины стал равным нулю, то высота поддерева уменьшилась и подъём нужно продолжить. Если баланс стал равным 2 или -2, следует выполнить одно из четырёх вращений и, если после вращений баланс вершины стал равным нулю, то подъём продолжается, иначе останавливается. В результате указанных действий на удаление вершины и балансировку (в худшем случае в каждой пройденной вершине) суммарно тратится, $\O(h)$ операций. Таким образом, требуемое количество действий — $\O(\log n)$.
+    \end{solution}
+    
   \item
     Придумайте, как реализовать структуру данных, поддерживающую следующие операции на последовательности из чисел:
     \begin{itemize}
