--- a/algo_template.tex
+++ b/algo_template.tex
@@ -99,6 +99,7 @@
   % \input{p01.tex}
   % \input{p02.tex}
   % \input{p03.tex}
-  \input{p04.tex}
+  % \input{p04.tex}
+  \input{p05.tex}
 
 \end{document}
