--- a/p05.tex
+++ b/p05.tex
@@ -82,6 +82,33 @@
   \item
     Пусть приоритеты случайны, а ключи все разные. Найдите матожидание количества листьев в
     Декартовом дереве из $n$ вершин (точно, а не асимптотически).
+    \begin{solution}
+      Обозначим количество листьев в дереве размера $n$ как $X_n$. Количество в дереве складывается из количества листьев в левом и правом поддеревьях. Если $i$ -- это индекс корня в исходном массиве, то матожидание можно посчитать через сумму:
+      \begin{eqnarray}
+        \mathbb{E}X_n = \sum_{i=0}^{n-1} (\mathbb{E}X_{i}+\mathbb{E}X_{n-i-1})\cdot P(i \text{ is root}) = \frac{1}{n} \sum_{i=0}^{n-1} (\mathbb{E}X_{i}+\mathbb{E}X_{n-i-1}) = \frac{2}{n} \sum_{i=0}^{n-1} \mathbb{E}X_{i} \\
+        n \cdot \mathbb{E}X_n = 2 \sum_{i=0}^{n-1} \mathbb{E}X_{i} \\
+      \end{eqnarray}
+      Тогда можно для разных $n$ написать систему:
+      \begin{equation}
+        \begin{cases}
+          n \cdot \mathbb{E}X_n = 2 \sum_{i=0}^{n-1} \mathbb{E}X_{i} \\
+          (n-1) \cdot \mathbb{E}X_{n-1} = 2 \sum_{i=0}^{n-2} \mathbb{E}X_{i} \\
+        \end{cases}
+      \end{equation}
+      Вычитаем:
+      \begin{eqnarray}
+        n \cdot \mathbb{E}X_n - (n-1) \cdot \mathbb{E}X_{n-1} = 2 \mathbb{E}X_{n-1} \\
+        n \cdot \mathbb{E}X_n = 2 \mathbb{E}X_{n-1} + (n-1) \cdot \mathbb{E}X_{n-1} \\
+        n \cdot \mathbb{E}X_n = (n+1) \mathbb{E}X_{n-1} \\
+        \mathbb{E}X_n = \frac{n+1}{n} \mathbb{E}X_{n-1} \\
+        \mathbb{E}X_n = \frac{n+1}{n} \frac{n}{n-1} \mathbb{E}X_{n-2} \\
+        \mathbb{E}X_n = \frac{n+1}{n} \frac{n}{n-1} \frac{n-1}{n-2} \mathbb{E}X_{n-3} \\
+        \ldots \\
+        \mathbb{E}X_n = \frac{n+1}{n} \frac{n}{n-1} \frac{n-1}{n-2} \ldots \frac{4}{3} \mathbb{E}X_{2} \\
+        \mathbb{E}X_n = \frac{n+1}{3} \mathbb{E}X_{2} \\
+        \mathbb{E}X_n = \frac{n+1}{3} \\
+      \end{eqnarray}
+    \end{solution}
 
   \item
     Пусть приоритеты случайны, а ключи все разные. Обозначим за $x_k$ вершину Декартова дерева,
