sln: add sln to task 2 a

--- a/p05.tex
+++ b/p05.tex
@@ -115,6 +115,22 @@
     содержащую $k$-тый по порядку ключ. Всего в дереве $n$ вершин.
     \begin{enumerate}
       \item Пусть $1 \le i \le j \le k \le n$. Найдите вероятность того, что $x_j$ --- общий предок $x_i$ и $x_k$.
+      \begin{solution}
+        Введем случайную величину $A(i,j)$:
+        \begin{equation}
+          \begin{cases}
+            A(i,j) = 1, \text{i предок j}\\
+            A(i,j) = 0, \text{иначе}
+          \end{cases}
+        \end{equation}
+        Рассмотрим, когда вершина $i$ является предком вершины $j$: $i$ является предком вершины $j$, если $i$ имеет наибольший приоритет среди вершин
+        отрезка $[i \ldots j]$ (если $i>j$ эта запись обозначает отрезок $[j\ldots i]$). Если $i$ имеет наибольший приоритет на отрезке, то если это корень, то $i$ действительно предок $j$. Если $i$ не корень, то $i$ и $j$ обязательно лежат в разных поддеревьях, так как иначе корень дерева лежит на отрезке $[i\ldots j]$ и имеет больший приоритет. Тогда мы можем перейти в поддерево, где лежат $i$ и $j$ и продолжить рассуждения в нем по индукции. Наоборот, если $i$ является предком $j$, то если $j$ находится в левом поддереве $(j < i)$, то и все вершины отрезка $[i\ldots j]$ находятся слева, а значит имеют приоритет меньше. Аналогично, если $j$ лежит справа. 
+        
+        Тогда можно посчитать вероятность того, что $i$ является предком $j$: все вершины отрезка $[i \ldots j]$ равновероятно окажутся максимальными на нем, поэтому $P(A(i,j) = 1) = \frac{1}{len([i \ldots j])+1}$. Но тогда вероятность того, что $x_j$ --- общий предок $x_i$ и $x_k$ будет
+        \begin{equation}
+          P(A(i,j) = 1 \land A(j,k) = 1) = \frac{1}{len([i \ldots j]) + len([j \ldots k]) + 1} = \frac{1}{len([i \ldots k]) + 1} = \frac{1}{k-i+1}
+        \end{equation}
+      \end{solution}
       \item Пусть $1 \le i \le k \le n$. Найдите матожидание длины пути между $x_i$ и $x_k$.
     \end{enumerate}
     Ответ достаточно выразить через комбинацию гармонических чисел $H_n = \sum\limits_{d = 1}^{n}\frac{1}{d}$.
