sln: add sln to task 3 b

--- a/p05.tex
+++ b/p05.tex
@@ -150,6 +150,9 @@
         Когда суммарный размер последовательности $n$ превысит $K$, то первые $n-K$ элементов уже никак не будут меняться при последующих запросах, поэтому можно завести дек на $K$ элементов -- поддерживать инвариант, чтобы в деке было не больше $K$ элементов. Если следующая операция append(x) вызывается на деке размера $K$, то будем сначала вызывать $pop\_front()$ или $pop\_back()$, в зависимости от флага $reversed$. Поэтому также нужно поддерживать флаг $reversed$, который, если установлен в $true$, то при $append(x)$ вызывает $push\_front(x)$, а при удалении элемента вызывает $pop\_front()$; если флаг установлен в $false$, то при $append(x)$ вызывает $push\_back(x)$, а при удалении элемента вызывает $pop\_back()$; понятно, что при вызове $rev()$ флаг $reversed$ меняется с $false$ на $true$ и с $true$ на $false$. Таким образом, сначала алгоритм наполняет дек, пока он не станет размера $K$. Как только он наполнится до этого размера, при каждом следующем добавлении он будет сначала делать $pop\_...$ в зависимости от флага $reversed$, который в самом начале работы алгоритма равен $false$, а только потом добавлять элемент в дек. Операция $pop\_...$ по сути формирует нам окончательную последовательность (можно записывать в какой-нибудь вектор). Поэтому когда все $n$ обработаны -- нужно вывести ответ: сначала выводим вектор из первой части последовательности, а потом по элементам исчерпываем деку (делаем $pop\_...$ в зависимости от текущего состояния флага $reversed$). Получается, что мы $n$ раз выполняли операции над декой (добавление в начало или конец), флагом (смена значения) и вектором итоговой последовательности (добавление в конец), и в конце вывели ответ, что суммарно дает асимптотику $\O(n)$, поэтому асимптотика $\O(n \log n)$ тоже подходит.
       \end{solution}
       \item $\O(n)$
+      \begin{solution}
+        Решение из предыдущего пункта за $\O(n)$.
+      \end{solution}
     \end{enumerate}
 
   \item \onlygroup{Мишунина}\\
